--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "dev": "nodemon",
-    "vercel-build": "npx prisma migrate deploy",
+    "vercel-build": "npx prisma db push",
     "postinstall": "prisma generate"
   },
   "keywords": [],
